# dog

./: .clang-tidy  .gitignore  CMakeLists.txt  dog.C
.cache/clangd/index/: dog.C.09F83FECE141964F.idx  main.C.9D21EBA2299158C4.idx
